--- a/playground-mobilenet.ipynb
+++ b/playground-mobilenet.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ordered-preparation",
    "metadata": {},
    "outputs": [
@@ -52,13 +52,13 @@
     "    'target_size': (img_height, img_width),\n",
     "#     'batch_size': batch_size,\n",
     "}\n",
-    "train_it = datagen.flow_from_directory(data_dir, subset='training', batch_size=2000, **flow_params)\n",
-    "test_it = datagen.flow_from_directory(data_dir, subset='validation', batch_size=500, **flow_params)"
+    "train_it = datagen.flow_from_directory(data_dir, subset='training', batch_size=500, **flow_params)\n",
+    "test_it = datagen.flow_from_directory(data_dir, subset='validation', batch_size=100, **flow_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "upper-framework",
    "metadata": {},
    "outputs": [],
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "spoken-meter",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez('data.npz', Xtrain, ytrain, Xtest, ytest)"
+    "np.savez('data500.npz', Xtrain, ytrain, Xtest, ytest)"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
